<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="tab_text_1">Leaning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="title_activity_project_submission">Project Submission</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
</resources>
