<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectSubmission"
    android:background="@drawable/gadsleaderbg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="262dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_rec"

                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_rec"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="324dp"
            android:background="@drawable/round_rec"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/gitLink"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/round_rec"
            android:ems="10"
            android:hint="@string/project_on_github_link"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"

            android:background="@drawable/sub_gradient"
            android:text="@string/submit"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/gitLink"
            app:layout_constraintStart_toStartOf="@+id/gitLink"
            app:layout_constraintTop_toBottomOf="@+id/gitLink" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/gad_project_top"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>